Updating About, error and Favicon

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="https://lh3.googleusercontent.com/proxy/iX3IIlFPV_4wjTGW1KhWvbfm98Ds5YC5GRxaxYZdfhCAIkRiPlB_Di6uaFk8kSr11eGWWgnvK8MyKPYolz8s2BcCXtKvDNu_wYbAV-7p1BjMW-vD4dA">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
