--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="https://lh3.googleusercontent.com/proxy/iX3IIlFPV_4wjTGW1KhWvbfm98Ds5YC5GRxaxYZdfhCAIkRiPlB_Di6uaFk8kSr11eGWWgnvK8MyKPYolz8s2BcCXtKvDNu_wYbAV-7p1BjMW-vD4dA">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Diablo 3 Profile Finder - David Hormiga Afonso</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Diablo 3 Profile Finder - David Hormiga Afonso doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
